Fix overflowing URL-as-link issue and width adjustments for edit checklist in narrow width environment.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -102,6 +102,11 @@ mat-sidenav {
     }
   }
 }
+::ng-deep {
+  .mat-form-field-infix {
+    width: 100% !important;
+  }
+}
 footer {
   padding: 1.5rem 1.2rem;
   font: 400 0.9em Roboto, "Helvetica Neue", sans-serif;
