--- a/src/app/checklist/use/clst-use-checklist-item/clst-use-checklist-item.component.scss
+++ b/src/app/checklist/use/clst-use-checklist-item/clst-use-checklist-item.component.scss
@@ -81,15 +81,18 @@
             }
             .secondary {
               ::ng-deep {
-                :first-child {
+                > *:first-child {
                   margin-top: 1rem;
                 }
                 color: #696969;
                 a {
                   color: #225892;
-                  word-wrap: break-word;
-                  margin: 0;
-                  max-width: 90%;
+                  margin-bottom: -0.375rem;
+                  display: inline-block;
+                  max-width: 100%;
+                  overflow: hidden;
+                  white-space: nowrap;
+                  text-overflow: ellipsis;
                   &:visited {
                     color: #783cb1;
                   }
